--- a/style.css
+++ b/style.css
@@ -115,3 +115,26 @@ p.scroll {
   width: 100%;
   height: 100%;
 }
+
+.more {
+  display: inline-block;
+  margin: auto;
+  vertical-align: center;
+  padding-top: 200px;
+
+  font-size: 22px;
+  padding-left: 100px;
+}
+
+.btn {
+  clear: both;
+  font-weight: bold;
+  padding: 15px;
+  font-size: 16px;
+  margin-top: 20px;
+  margin-left: 100px;
+  color: white;
+  background-color: darkcyan;
+  border-radius: 3px;
+  border: none;
+}
